--- a/index.html
+++ b/index.html
@@ -20,12 +20,29 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
+    <div class="container content-1">
+        <div class="row py-5">
+            <div class="col-md-6">
+                <p>INGENIO Y ARQUITECTURA S.A.S  es una empresa Colombiana,  conformada por un excelente grupo de trabajo, con el propósito de ofrecer sus servicios en el diseño, construcción, asesorías, remodelación, rehabilitación, innovación, adecuación, y acondicionamiento de construcciones antiguas y nuevas, junto con la comercialización de materiales relacionados con la construcción.</p>
+            </div>
             <div class="col-md-6"></div>
+        </div>
+        <div class="row py-5">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <p>Nuestra empresa se preocupa de la capacitación y conformación del selecto personal calificado relacionado en nuestro campo para reflejar un excelente servicio y calidad de trabajo, sin dejar a un lado los principios, valores y recursos naturales, lo cual nos caracterizan, Dando un servicio de calidad a precios competitivos con un plus de confianza para nuestros clientes en el desarrollo de los proyectos y el ejercicio de los presupuestos, siempre cuidando el proyecto de construcción como propio; además de tomar en cuenta que las construcciones se realicen en el marco de la tecnología más avanzada, en cuanto a su diseño y estructuración, así como procurando que las edificaciones se integren al medio ambiente causando el menor impacto posible.</p>
+            </div>
+        </div>
+        <div class="row py-5">
+            <div class="col-md-6">
+                <p>Tenemos la experiencia necesaria para desarrollar proyectos bajo las más diversas condiciones y en el momento que nuestros clientes lo requieran, incluso en situaciones de urgencia y con la mejor relación costo-beneficio. 
+                    <br>
+                    Adicionalmente, cuenta con la representación comercial de importantes empresas Nacionales y Extranjeras,  Fabricantes de materiales reconocidos y de alta calidad, con las ventajas que esto representa, además de suministrar materiales, relacionados con la construcción.</p>
+            </div>
             <div class="col-md-6"></div>
         </div>
     </div>
+
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
