--- a/index.html
+++ b/index.html
@@ -3,24 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap-reboot.min.css.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Ingeniería y arquitectura</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <title>Ingenio y arquitectura</title>
 </head>
 <body>
+
+    <nav id="main-navbar">
+        <div class="logo-header animated fadeInLeft">
+            <img src="img/full_horizontal.svg" alt="">
+        </div>
+        <ul>
+            <li id="t-inicio">Inicio</li>
+            <li id="t-porque">Por qué nosotros</li>
+            <li id="t-servicios">Servicios</li>
+            <li id="t-contacto">Contacto</li>
+        </ul>
+    </nav>
     
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 hero row">
-                <div class="col-md-6"></div>
-                <div class="col-md-6 logo">
-                    <img src="img/full_horizontal.svg" alt="">
+    <div class="col-12 hero row">
+        <div class="col-md-6 logo" id="inicio">
+            <img src="img/full_horizontal.svg" alt="">
+        </div>
+        <div class="col-md-6 content">
+            <h3>Mantenimiento</h3>
+            <h3>Impermeabilización</h3>
+            <h3>Remodelaciones</h3>
+            <h3>Instalaciones eléctricas, voz y datos</h3>
+            <h3>Techos y Cubiertas</h3>
+            <hr>
+            <h3 class="resalte"><a href="#servicios">Ver todos los servicios</a></h3>
+            <h3 class="resalte"><a href="#contacto">Solicitar una cotización ahora</a></h3>
+        </div>
+    </div>
+    <div class="container-fluid px-5 content-1" id="content">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-4">
+                    <p>INGENIO Y ARQUITECTURA S.A.S  es una empresa Colombiana,  conformada por un excelente grupo de trabajo, con el propósito de ofrecer sus servicios en el diseño, construcción, asesorías, remodelación, rehabilitación, innovación, adecuación, y acondicionamiento de construcciones antiguas y nuevas, junto con la comercialización de materiales relacionados con la construcción.</p>
+                </div>
+                <div class="col-md-8">
+                    <div class="contenedor-img-sol">
+                        <img src="img/remodelaciones.jpeg" alt="" >
+                        <img src="img/Remodelacion-fin.jpeg" alt="">
+                        <img src="img/instalaciones-2.jpeg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row py-5">
+                <div class="col-md-6">
+                    <div class="contenedor-img-sol">
+                        <img src="img/estructura-techo.jpeg " alt="">
+                        <img src="img/Techos-2.jpeg" alt="">
+                        <img src="img/Techos.jpeg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6" style="padding-left:1rem;box-sizing:border-box">
+                    <p>Nuestra empresa se preocupa de la capacitación y conformación del selecto personal calificado relacionado en nuestro campo para reflejar un excelente servicio y calidad de trabajo, sin dejar a un lado los principios, valores y recursos naturales, lo cual nos caracterizan, Dando un servicio de calidad a precios competitivos con un plus de confianza para nuestros clientes en el desarrollo de los proyectos y el ejercicio de los presupuestos, siempre cuidando el proyecto de construcción como propio; además de tomar en cuenta que las construcciones se realicen en el marco de la tecnología más avanzada, en cuanto a su diseño y estructuración, así como procurando que las edificaciones se integren al medio ambiente causando el menor impacto posible.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid px-5 content-1">
+
+    <div class="container-fluid px-5 content-2" id="porque">
+        <div class="titulo">
+            <h2>¿Por qué trabajar con nosotros?</h2>
+        </div>
+        <div class="container">
+            <div class="row">
+                <p>Nuestra misión es caracterizarnos por prestar el servicio de estudio, proyección, gestión y ejecución de todo lo relacionado con la construcción. Destacandonos en áreas tales como rehabilitación de todo tipo de edificaciones. Asesorías en la ejecución de diseño, remodelación, adecuación, innovación, acondicionamiento  de construcciones antiguas y nuevas dirigidas a organismos públicos, privados y particulares. Levantamientos arquitectónicos, recorridos y animaciones virtuales en los diferentes programas acad (3d).<br> <span class="resaltar"> Enfocándonos siempre en la mejora continua de la organización y de este modo proporcionar solidez y equilibrio con el entorno de la comunidad, generando progreso y bienestar.</span> </p>
+                <p>Tenemos la experiencia necesaria para desarrollar proyectos bajo las más diversas condiciones y en el momento que nuestros clientes lo requieran, incluso en situaciones de urgencia y con la mejor relación costo-beneficio.</p>
+                <p>Adicionalmente, cuenta con la representación comercial de importantes empresas Nacionales y Extranjeras,  Fabricantes de materiales reconocidos y de alta calidad, con las ventajas que esto representa, además de suministrar materiales, relacionados con la construcción.</p>                            
+            </div>
+            <div class="row clientes">
+                <h3>Algunos de nuestros clientes</h3>
+                <div class="container-imagen"><img src="img/logo-cliente-1.png" alt=""></div>
+                <div class="container-imagen"><img src="img/logo-cliente-2.png" alt=""></div>
+                <div class="container-imagen"><img src="img/logo-cliente-3.png" alt=""></div>
+                <div class="container-imagen"><img src="img/logo-cliente-4.png" alt=""></div>
+            </div>
+            <div class="row">
+                <p>INGYARQ, Con respaldo de sus marcas reconocidas y comprometido con sus políticas de servicio, se asegurará durante cualquier contrato a realizar de contar con personal altamente calificado acompañados de un residente Profesional y/o técnico, por tiempo completo que se someterá a las labores de Gerencia e Interventora de la obra.
+                Además de ser una empresa conformada por un equipo profesional altamente calificado, INGYARQ, siempre esta dispuesta a cumplir a cabalidad todas las obligaciones adquiridas con ustedes, rigiendo todos nuestros trabajos bajo los siguientes principios:</p>
+                <ul>
+                    <li>Ofrecer a sus clientes conducir sus proyectos con escrupulosa honorabilidad, cuidando del marco legal y reglamentación relativa, haciendo que todo el proceso de inversión financiera - ejecución del proyecto sea plenamente confortable para nuestro cliente.</li>
+                    <li>Estrictas medidas de seguridad.</li>
+                    <li>Materiales con estándares de calidad.</li>
+                    <li>Cumplimiento en las fechas estipuladas dentro del contrato.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid content-1" id="servicios">
+        <div class="titulo">
+            <h2>Servicios</h2>
+        </div>
         <div class="container">
             <div class="row py-5">
                 <div class="col-md-6">
@@ -45,6 +123,29 @@
         </div>
     </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <div class="container-fluid" id="contacto">
+        <div class="titulo">
+            <h2>Servicios</h2>
+        </div>
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-6">
+                    <p>INGENIO Y ARQUITECTURA S.A.S  es una empresa Colombiana,  conformada por un excelente grupo de trabajo, con el propósito de ofrecer sus servicios en el diseño, construcción, asesorías, remodelación, rehabilitación, innovación, adecuación, y acondicionamiento de construcciones antiguas y nuevas, junto con la comercialización de materiales relacionados con la construcción.</p>
+                </div>
+                <div class="col-md-6">
+                    <form action="">
+                        <input type="text">
+                        <input type="text">
+                        <hr>
+                        <button></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+
+    <script src="js/scripts.js"></script>
 </body>
 </html>
