--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row py-5">
+            <div class="row py-5 invertir-orden">
                 <div class="col-md-6">
                     <div class="contenedor-img-sol">
                         <img class="wow zoomIn delay-p1" src="img/estructura-techo.jpeg " alt="">
@@ -169,7 +169,7 @@
                         <li><b>CARPINTERIA MADERA:</b> Puertas, Ventanas, Amoblados, Cocinas. etc.               </li>
                         <li><b>ASFALTOS:</b>               </li>
                         <li><b>MANTENIMIENTO Y CONSTRUCCION EN GENERAL:</b> Casas, Apartamentos, Bodegas, Locales Comerciales, Fachadas y demás espacios.               </li>
-                        SUMINISTRO DE INSUMOS Y ELEMENTOS PARA OBRAS; Dotación, Alojamientos, Desechables, Equipos de Calefacción y  Ventilación, Muebles de oficina.                
+                        <li><b>SUMINISTRO DE INSUMOS Y ELEMENTOS PARA OBRAS:</b> Dotación, Alojamientos, Desechables, Equipos de Calefacción y  Ventilación, Muebles de oficina.                </li>
                         <li><b>SUMINISTRO DE MATERIALES PARA LA CONSTRUCCION:</b> De alta calidad y marcas reconocidas.              </li>
                     </ul>
                 </p>
@@ -227,7 +227,7 @@
         </div>
     </div>
     <footer>
-        <p>Carrera 70C #5A - 81 Cel: (313) 259 5457 - (310) 866 0833 / (312) 568 0865</p>
+        <p><a href="mailto:info.ventas@ingenioyarquitectura.com.co">info.ventas@ingenioyarquitectura.com.co</a> <br> Cel: (313) 259 5457 - (310) 866 0833 / (312) 568 0865</p>
         <span>Todos los derechos reservados 2020. Ingenio y Arquitectura SAS </span>
     </footer>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
