fixes menu movil

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <img src="img/full_horizontal.svg" alt="">
         </div>
         <ul>
-            <li id="t-inicio">Inicio</li>
-            <li id="t-porque">Por qué nosotros</li>
-            <li id="t-servicios">Servicios</li>
-            <li id="t-contacto">Contacto</li>
+            <a href="#inicio"><li id="t-inicio">Inicio</li></a>
+            <a href="#porque"><li id="t-porque">Por qué nosotros</li></a>
+            <a href="#servicios"><li id="t-servicios">Servicios</li></a>
+            <a href="#contacto"><li id="t-contacto">Contacto</li></a>
         </ul>
     </nav>
     
