--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Ingenio y arquitectura: calidad y experiencia en construccion, mantenimiento, impermeabilización, remodelacion, instalaciones y cubiertas en Bogota Colombia">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -27,15 +28,15 @@
             <img src="img/full_horizontal.svg" class="wow animated fadeIn" alt="">
         </div>
         <div class="col-md-6 content">
-            <h3 class="wow animated fadeInRight delay-p1">Mantenimiento</h3>
-            <h3 class="wow animated fadeInRight delay-p2">Impermeabilización</h3>
-            <h3 class="wow animated fadeInRight delay-p3">Remodelaciones</h3>
-            <h3 class="wow animated fadeInRight delay-p4">Instalaciones eléctricas, voz y datos</h3>
-            <h3 class="wow animated fadeInRight delay-p5">Techos y Cubiertas</h3>
+            <h1 class="wow animated fadeInRight delay-p1">Mantenimiento</h1>
+            <h1 class="wow animated fadeInRight delay-p2">Impermeabilización</h1>
+            <h1 class="wow animated fadeInRight delay-p3">Remodelaciones</h1>
+            <h1 class="wow animated fadeInRight delay-p4">Instalaciones eléctricas, voz y datos</h1>
+            <h1 class="wow animated fadeInRight delay-p5">Techos y Cubiertas</h1>
             <hr>
-            <h3 class="resalte "><a href="#porque">¿Por qué escogernos?</a></h3>
-            <h3 class="resalte "><a href="#servicios">Ver todos los servicios</a></h3>
-            <h3 class="resalte "><a href="#contacto">Solicitar una cotización ahora</a></h3>
+            <h1 class="resalte "><a href="#porque">¿Por qué escogernos?</a></h1>
+            <h1 class="resalte "><a href="#servicios">Ver todos los servicios</a></h1>
+            <h1 class="resalte "><a href="#contacto">Solicitar una cotización ahora</a></h1>
         </div>
     </div>
     <div class="container-fluid px-5 content-1" id="content">
@@ -168,9 +169,7 @@
                         <li><b>REMODELACION DE ESPACIOS:</b> Exteriores, Interiores.               </li>
                         <li><b>CARPINTERIA MADERA:</b> Puertas, Ventanas, Amoblados, Cocinas. etc.               </li>
                         <li><b>ASFALTOS:</b>               </li>
-                        <li><b>MANTENIMIENTO Y CONSTRUCCION EN GENERAL:</b> Casas, Apartamentos, Bodegas, Locales Comerciales, Fachadas y demás espacios.               </li>
-                        <li><b>SUMINISTRO DE INSUMOS Y ELEMENTOS PARA OBRAS:</b> Dotación, Alojamientos, Desechables, Equipos de Calefacción y  Ventilación, Muebles de oficina.                </li>
-                        <li><b>SUMINISTRO DE MATERIALES PARA LA CONSTRUCCION:</b> De alta calidad y marcas reconocidas.              </li>
+                        <li><b>MANTENIMIENTO Y CONSTRUCCION EN GENERAL:</b> Casas, Apartamentos, Bodegas, Locales Comerciales, Fachadas y demás espacios.               </li>                       
                     </ul>
                 </p>
             </div>
@@ -227,7 +226,7 @@
         </div>
     </div>
     <footer>
-        <p><a href="mailto:info.ventas@ingenioyarquitectura.com.co">info.ventas@ingenioyarquitectura.com.co</a> <br> Cel: (313) 259 5457 - (310) 866 0833 / (312) 568 0865</p>
+        <p><a href="mailto:info.ventas@ingenioyarquitectura.com.co">info.ventas@ingenioyarquitectura.com.co</a> <br> Cel: (313) 259 5457 - (310) 866 0833</p>
         <span>Todos los derechos reservados 2020. Ingenio y Arquitectura SAS </span>
     </footer>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
