--- a/index.html
+++ b/index.html
@@ -234,6 +234,15 @@
       <!-- Submit the Form to Google Using "AJAX" -->
 
     <script src="js/handle-submit.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161503106-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-161503106-1');
+    </script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
